--- a/estilos/paginas.css
+++ b/estilos/paginas.css
@@ -29,3 +29,19 @@ nav {
     background-color: black;
     border-radius: 0px 0px 10px 10px;
 }
+footer{
+    background-color: black;
+    color: antiquewhite;
+    text-align: center;
+    height: 5vh;
+    display: grid;
+    align-content: center;
+    margin: 0%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-shadow: 2px 2px 4px blanchedalmond;
+    border-radius: 10px 10px 0px 0px;
+}
+footer strong {
+    font-variant: small-caps;
+    
+}
