--- a/estilos/paginas.css
+++ b/estilos/paginas.css
@@ -8,6 +8,8 @@ body {
     background-position: center;
     background-position: inherit;
     background-attachment: fixed;
+    background-size: 95%;
+    background-position: center;
 }
 body h1 {
     text-align: center;
