--- a/estilos/paginas.css
+++ b/estilos/paginas.css
@@ -42,8 +42,7 @@ section#espaço{
 
 fieldset{
     border-radius: 0px 20px;
-    box-shadow: -5px 8px 8px rgba(0, 0, 0, 0.527);
-}
+    box-shadow: -5px 8px 8px rgba(0, 0, 0, 0.527);}
 footer{
     background-color: black;
     color: antiquewhite;
