--- a/estilos/paginas.css
+++ b/estilos/paginas.css
@@ -1,24 +1,18 @@
 @charset "UTF-8";
 body {
-    background-image: url("../imagens/logo-biblioteca1.jpg"),
-        url("../imagens/logo-biblioteca2.jpg"), url("../imagens/logo-biblioteca3.png"), url("../imagens/logo-biblioteca4.png"), url("../imagens/logo-biblioteca5.png");
-        background-position: top left, top right, bottom left, bottom right, center center;
-        background-repeat: no-repeat, no-repeat, no-repeat, no-repeat, no-repeat;
-        background-blend-mode: lighten;
-        background-size: 23.5%;
-        background-color: rgba(240, 248, 255, 0.75);
-     margin-top: 0%;
-    
-    background-color: rgba(255,255,255,0.7);
-    background-blend-mode: lighten; 
-    
-    background-attachment: fixed;
-    height: 80vw;
-    
+   height: 90vh;
 }
 body h1 {
     text-align: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+input#val {
+    display: inline-block;
+    box-shadow: -5px 5px 8px rgba(0, 0, 0, 0.527);
+}
+input{
+    display: block;
+    border-radius: 0px 5px;
 }
 body nav a {
     text-decoration: none;
@@ -29,15 +23,26 @@ body nav a {
     text-shadow: -2px 2px 4px blanchedalmond;
  }
 nav {
-    margin-top: 0%;
+    margin: 0%;
     padding-top: 2%;
     padding-bottom: 2%;
     padding-left: 1%;
     background-color: black;
     border-radius: 0px 0px 10px 10px;
 }
-section#espaço{
-    height: 92%;
+section#espaco{
+    
+    background-image:  url("../imagens/logo-biblioteca1.png"),
+    url("../imagens/logo-biblioteca2.png"), url("../imagens/logo-biblioteca3.png"), url("../imagens/logo-biblioteca4.png"), url("../imagens/logo-biblioteca5.png");
+    background-position: top left, top right, bottom left, bottom right, center center;
+    background-repeat: no-repeat, no-repeat, no-repeat, no-repeat, no-repeat;
+           
+    background-color: rgba(240, 248, 255, 0.75);
+    margin-top: 0%;
+height: auto;
+background-color: rgba(255,255,255,0.7);
+background-blend-mode: lighten; 
+background-size: 235px;    
 }
 
 fieldset{
