--- a/estilos/paginas.css
+++ b/estilos/paginas.css
@@ -48,6 +48,9 @@ background-size: 235px;
 fieldset{
     border-radius: 0px 20px;
     box-shadow: -5px 8px 8px rgba(0, 0, 0, 0.527);}
+    form{
+        height: 500px;
+    }
 footer{
     background-color: black;
     color: antiquewhite;
